--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "token": "ODg1Mzc4NTg2MzQ3OTcwNTcy.YTmLEA.m3NvEKKCENzSFAzWAyNnS8V2pOw",
-    "owner": 536834734597210112
+    "token": "ODg1Mzc4NTg2MzQ3OTcwNTcy.YTmLEA.IdWU9ounIym5Xg3B7XiSzpLxpBE",
+    "owners": [536834734597210112, 390111580542599168]
 }
